--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -15,11 +15,11 @@ section: post
         </a>
         <a rel="author" class="p-author h-card" href="https://edjohnsonwilliams.co.uk">Ed Johnson-Williams</a>
     </div>
-    <div class="mt-1">
+    <div class="mt-1 border-bottom">
         <h5 class="post-date">{{ page.date | readableDate }}</h5>
         <p class="reading-time">Reading time:<span> {{ content | readingTime }}</span></p>
     </div>
-    <div class="post-content mt-5 pt-2 border-top">
+    <div class="post-content mt-5 pt-2">
         {{ content | safe }}
     </div>
 </article>
