--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -7,7 +7,7 @@
 	<div class="container">
 		<header>
 			<div class="row mt-5 mb-4">
-				<div class="col-10 offset-1 col-md-8 offset-md-2 p-0">
+				<div class="col-10 offset-1 col-md-6 offset-md-2 p-0">
 					<h1 class="title">
 						<a class="h-card" rel="me" href="/">{{ site.title }}</a>
 					</h1>
@@ -18,7 +18,7 @@
 		<main>
 			<div class="row">
 				<div class="col-10 offset-1 col-md-8 offset-md-2 p-0">
-					{{ layoutContent | safe }}
+					{{ content | safe }}
 				</div>
 			</div>
 		</main>
