--- a/_includes/layouts/home.njk
+++ b/_includes/layouts/home.njk
@@ -4,4 +4,4 @@ section: home
 ---
 {% set postslist = collections.posts %}
 {% include "components/postslist.njk" %}
-{{ layoutContent | safe }}
+{{ content | safe }}
