adding reading list of pocket; moving assets out of _includes

--- a/_includes/components/head.njk
+++ b/_includes/components/head.njk
@@ -36,9 +36,9 @@
     integrity="sha384-zSqpVUzBr2793nyqYIF21Cm6NAojO1qFxgFXs2gvheV1Q6p8Quw/OpM+9CZM6xjz"
     crossorigin="anonymous"></script>
 
-  <link rel="stylesheet" href="/_includes/assets/css/main.css">
+  <link rel="stylesheet" href="/assets/css/main.css">
 
 
-  <script src="/_includes/assets/js/matomo.js"></script>
+  <script src="/assets/js/matomo.js"></script>
 
 </head>
