--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -25,7 +25,7 @@
 
 		{% include "components/footer.njk" %}
 	</div>
-	  <script src="/_includes/assets/js/main.js"></script>
+	  <script src="/assets/js/main.js"></script>
 
 </body>
 
