--- a/_includes/layouts/page.njk
+++ b/_includes/layouts/page.njk
@@ -4,6 +4,6 @@ section: page
 ---
 {% include "components/scrollbar_indicator.njk" %}
 
-<h1>{{ title }}</h1>
+<h1 class="h3">{{ title }}</h1>
 
 {{ layoutContent | safe }}
