--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -6,7 +6,7 @@
 <body>
 	<div class="container">
 		<header>
-			<div class="row mt-5 mb-4">
+			<div class="row mt-4 mb-4">
 				<div class="col-10 offset-1 col-md-6 offset-md-2 p-0">
 					<h1 class="title">
 						<a class="h-card" rel="me" href="/">{{ site.title }}</a>
@@ -14,6 +14,9 @@
 				</div>
 			</div>
 		</header>
+
+					{% include "components/nav.njk" %}
+
 
 		<main>
 			<div class="row">
@@ -25,7 +28,7 @@
 
 		{% include "components/footer.njk" %}
 	</div>
-	  <script src="/assets/js/main.js"></script>
+	<script src="/assets/js/main.js"></script>
 
 </body>
 
