--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -4,22 +4,29 @@ section: post
 ---
 
 {% include "components/scrollbar_indicator.njk" %}
+
 <article class="h-entry">
+
+    <!-- h-entry things -->
+    <div class="d-none">
+        <a class="u-url" href="{{ page.url }}"></a>
+        <time class="dt-published">{{ page.date | ISO_8601_Date }}</time>
+        <a rel="author" class="p-author h-card" href="https://edjohnsonwilliams.co.uk">Ed Johnson-Williams</a>
+    </div>
+    <!-- End of h-entry things -->
+
+
     <div class="mt-3">
         <h2 class="post-title p-name">{{ title }}</h2>
     </div>
-    <div class="d-none">
-        <!-- h-entry things -->
-        <a class="u-url" href="{{ page.url }}">
-            <time class="dt-published">{{ page.date | ISO_8601_Date }}</time>
-        </a>
-        <a rel="author" class="p-author h-card" href="https://edjohnsonwilliams.co.uk">Ed Johnson-Williams</a>
-    </div>
+
     <div class="mt-1 border-bottom">
         <h5 class="post-date">{{ page.date | readableDate }}</h5>
         <p class="reading-time">Reading time:<span> {{ content | readingTime }}</span></p>
     </div>
+
     <div class="e-content post-content mt-5 pt-2">
         {{ content | safe }}
     </div>
+
 </article>
