--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -14,6 +14,10 @@ body {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
 
+.word-wrap-break-word {
+    word-wrap: break-word;
+}
+
 a {
     border-bottom: 2px solid #2341C1;
     color: #212121;
