--- a/_includes/components/head.njk
+++ b/_includes/components/head.njk
@@ -23,6 +23,9 @@
   <link rel="authorization_endpoint" href="https://indieauth.com/auth">
   <link rel="token_endpoint" href="https://tokens.indieauth.com/token">
   {% endif %}
+  {% if site.micropub == true %}
+  <link rel="micropub" href="{{ site.url }}/micropub">
+  {% endif %}
   {% if site.netlifyCMS == true %}
   <script async src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
   {% endif %}
