--- a/_includes/components/head.njk
+++ b/_includes/components/head.njk
@@ -32,7 +32,7 @@
   {% endif %}
 
   {% if site.author.instagramUsername %}
-  <link href="https://instagram.com/{{ site.instagramUsername }}" rel="me">
+  <link href="https://instagram.com/{{ site.author.instagramUsername }}" rel="me">
   {% endif %}
 
   {% if site.netlifyCMS == true %}
