--- a/_includes/layouts/home.njk
+++ b/_includes/layouts/home.njk
@@ -3,5 +3,8 @@ layout: layouts/base.njk
 section: home
 ---
 {% set postslist = collections.posts %}
-{% include "components/postslist.njk" %}
-{{ content | safe }}
+<div class="row">
+    <div class="col-12 col-md-9">
+        {% include "components/postslist.njk" %}
+    </div>
+</div>
