--- a/_includes/layouts/page.njk
+++ b/_includes/layouts/page.njk
@@ -5,5 +5,6 @@ section: page
 {% include "components/scrollbar_indicator.njk" %}
 
 <h1 class="h3">{{ title }}</h1>
-
+<div class="mt-3">
 {{ content | safe }}
+</div>
