--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -5,28 +5,38 @@ section: post
 
 {% include "components/scrollbar_indicator.njk" %}
 
-<article class="h-entry">
+<div class="row">
+    <article class="h-entry mt-3 col-12 col-md-9">
 
-    <!-- h-entry things -->
-    <div class="d-none">
-        <a class="u-url" href="{{ page.url }}"></a>
-        <time class="dt-published">{{ page.date | ISO_8601_Date }}</time>
-        <a rel="author" class="p-author h-card" href="https://edjohnsonwilliams.co.uk">Ed Johnson-Williams</a>
-    </div>
-    <!-- End of h-entry things -->
+        <!-- h-entry things -->
+        <div class="d-none">
+            <a class="u-url" href="{{ page.url }}"></a>
+            <time class="dt-published">{{ page.date | ISO_8601_Date }}</time>
+            <a rel="author" class="p-author h-card" href="https://edjohnsonwilliams.co.uk">Ed Johnson-Williams</a>
+        </div>
+        <!-- End of h-entry things -->
 
 
-    <div class="mt-3">
-        <h2 class="post-title p-name">{{ title }}</h2>
-    </div>
+        {# <div class="row">
+            <div class="col-9 offset-1"> #}
+                <div class="mt-3">
+                    <h2 class="post-title p-name">{{ title }}</h2>
+                </div>
 
-    <div class="mt-1 border-bottom">
-        <h5 class="post-date">{{ page.date | readableDate }}</h5>
-        <p class="reading-time">Reading time:<span> {{ content | readingTime }}</span></p>
-    </div>
+                <div class="mt-1 border-bottom">
+                    <h5 class="post-date">{{ page.date | readableDate }}</h5>
+                    <p class="reading-time">Reading time:<span> {{ content | readingTime }}</span></p>
+                </div>
+            {# </div>
+        </div> #}
 
-    <div class="e-content post-content mt-5 pt-2">
-        {{ content | safe }}
-    </div>
+        {# <div class="row">
+            <div class="col-9 offset-2"> #}
+                <div class="e-content post-content mt-4 pt-2">
+                    {{ content | safe }}
+                </div>
+            {# </div>
+        </div> #}
 
-</article>
+    </article>
+</div>
