--- a/_includes/layouts/page.njk
+++ b/_includes/layouts/page.njk
@@ -5,6 +5,6 @@ section: page
 {% include "components/scrollbar_indicator.njk" %}
 
 <h1 class="h3">{{ title }}</h1>
-<div class="mt-3">
+<section class="col-12 col-md-9 mt-3">
 {{ content | safe }}
-</div>
+</section>
