fixing some layout; adding icons to nav

--- a/_includes/components/nav.njk
+++ b/_includes/components/nav.njk
@@ -1,10 +1,11 @@
-  <div class="col-12 col-md-9 px-0 mt-4 d-flex justify-content-center">
+  <div class="col-11 offset-1 col-md-9 offset-md-2 px-0 mt-4">
     <nav>
       <ul class="nav">
         {% for nav in collections.nav %}
-        <li class="nav-item {% if nav.url == page.url %}active{% endif %} ">
+        <li class="nav-item {% if nav.url == page.url %}active{% endif %}">
+
           <a href="{{ nav.url | url }}"
-            class="nav-link text-light mx-1 {% if loop.first %}rounded-left{% endif %} {% if loop.last %}rounded-right{% endif %}">{{ nav.data.navtitle or nav.data.title }}</a>
+            class="nav-link text-light mx-1 {% if loop.first %}rounded-left{% endif %} {% if loop.last %}rounded-right{% endif %}"><img src="/assets/internal_images/{{ nav.data.navicon }}" class="img-fluid mr-2" width="20">{{ nav.data.navtitle or nav.data.title }}</a>
         </li>
         {% endfor %}
 
