--- a/_includes/components/postslist.njk
+++ b/_includes/components/postslist.njk
@@ -1,17 +1,23 @@
-<section>
+<section class="mt-3">
 	{% for post in postslist | reverse %}
 	<article>
-		<div class="row mt-4 mx-0">
-			<div class="col-12 col-md-3">
-				<h2 class="row post-date"><strong>{{ post.date | readableDate }}</strong></h2>
+		<div class="row py-2 my-0 mx-0">
+			<div class="col-12 col-md-4 d-flex align-items-center">
+				<h5 class="post-date">{{ post.date | readableDate }}</h5>
 			</div>
-			<div class="col-12 col-md-9">
-				<h2 class="row post-title">
+			<div class="col-12 col-md-8 d-flex align-items-center">
+				<h2 class="post-title">
 					<a href="{{ post.url | url }}" title="{{ post.data.title }}">{{ post.data.title }}</a>
 				</h2>
 			</div>
 		</div>
+
+
 	</article>
+	{% if loop.revindex > 1 %}
+	<hr>
+	{% endif %}
+
 	{% endfor %}
 
 </section>
