--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -7,7 +7,7 @@
 	<div class="container">
 		<header>
 			<div class="row mt-4 mb-4">
-				<div class="col-md-9 p-0 d-flex justify-content-center">
+				<div class="col-11 offset-1 col-md-9 offset-md-2 p-0">
 					<h1 class="title">
 						<a class="h-card" rel="me" href="/">{{ site.title }}</a>
 					</h1>
