--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -6,8 +6,8 @@
 <body>
 	<div class="container">
 		<header>
-			<div class="row mt-4 mb-4">
-				<div class="col-11 offset-1 col-md-9 offset-md-2 p-0">
+			<div class="row mt-4 mb-4 justify-content-start">
+				<div class="col-11 offset-1 col-md-9 offset-md-2 p-0 pl-3">
 					<h1 class="title">
 						<a class="h-card" rel="me" href="/">{{ site.title }}</a>
 					</h1>
