--- a/_includes/layouts/page.njk
+++ b/_includes/layouts/page.njk
@@ -4,7 +4,7 @@ section: page
 ---
 {% include "components/scrollbar_indicator.njk" %}
 
-<h1 class="h3">{{ title }}</h1>
-<section class="col-12 col-md-9 mt-3">
-{{ content | safe }}
+<section class="col-12 col-md-10">
+    <h1 class="h3">{{ title }}</h1>
+    {{ content | safe }}
 </section>
