--- a/_includes/components/footer.njk
+++ b/_includes/components/footer.njk
@@ -1,30 +1,42 @@
 <footer>
   <div class="row mt-4 mb-4">
-      <div class="col-10 offset-1 col-md-1 offset-md-2 p-0 border-top">
-        {% if site.author.twitterUsername %}
-          <a href="https://twitter.com/{{ site.author.twitterUsername }}" rel="me">Twitter</a>
-          <br>
-        {% endif %}
-        {% if site.repository %}
-          <a href="https://github.com/{{ site.repository }}">Source</a>
-        {% endif %}
-          <br>
-          <a href="/feed.xml">RSS</a>
-          <br>
-        <a href="/sitemap.xml">Sitemap</a>
-        {% if site.author.mastodonUsername %}
-          <link rel="me" href="https://mastodon.social/{{ site.author.mastodonUsername}}">
-        {% endif %}
-      </div>
-      {% if site.contentLicence %}
+    <div class="col-10 offset-1 col-md-1 offset-md-2 p-0 border-top">
 
-      <div class="col-10 offset-1 col-md-4 mt-4 mt-md-0 p-0 border-top">
-          <p class="text-md-right">
-              Content on this website is under a
-              <a href="{{ site.contentLicence.link }}">{{ site.contentLicence.text }}</a>.
-          </p>
-      </div>
+      {% if site.author.twitterUsername %}
+      <a href="https://twitter.com/{{ site.author.twitterUsername }}" rel="me">Twitter</a>
+      <br>
       {% endif %}
+
+      {% if site.repository %}
+      <a href="https://github.com/{{ site.repository }}">Source</a>
+      <br>
+      {% endif %}
+
+      {% if site.RSSFeed %}
+      <a href="/feed.xml">RSS</a>
+      <br>
+      {% endif %}
+
+      {% if site.sitemap %}
+      <a href="/sitemap.xml">Sitemap</a>
+      {% endif %}
+
+      {% if site.author.mastodonUsername %}
+      <link rel="me" href="https://mastodon.social/{{ site.author.mastodonUsername}}">
+      {% endif %}
+
+    </div>
+
+    {% if site.contentLicence %}
+
+    <div class="col-10 offset-1 col-md-4 mt-4 mt-md-0 p-0 border-top">
+      <p class="text-md-right">
+        Content on this website is under a
+        <a href="{{ site.contentLicence.link }}">{{ site.contentLicence.text }}</a>.
+      </p>
+    </div>
+
+    {% endif %}
 
   </div>
 </footer>
