--- a/_includes/components/head.njk
+++ b/_includes/components/head.njk
@@ -50,6 +50,7 @@
 
   <link rel="stylesheet" href="/assets/css/main.css">
 
+  <script src="/assets/js/menu.js" defer></script>
 
   <script src="/assets/js/matomo.js"></script>
 
