--- a/_includes/layouts/home.njk
+++ b/_includes/layouts/home.njk
@@ -4,7 +4,7 @@ section: home
 ---
 {% set postslist = collections.posts %}
 <div class="row">
-    <div class="col-12 col-md-10">
+    <div class="col-12 col-md-10 pl-0">
         {% include "components/postslist.njk" %}
     </div>
 </div>
