--- a/_includes/layouts/reading-list.njk
+++ b/_includes/layouts/reading-list.njk
@@ -1,9 +1,7 @@
 ---
-title: Reading List
-permalink: /reading-list/index.html
 layout: layouts/page.njk
+section: reading-list
 ---
-
 <p>
     This is a list of the {{ readingList | length }} {% if readingList | length > 50 %} (🤦‍‍‍‍) {% endif %} links that
     are currently saved in <a href="https://getpocket.com">my Pocket account</a>
