--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -34,6 +34,26 @@ a.nav-link {
     background-color: #2341C1;
 }
 
+a.nav-link:hover,
+a.nav-link:active,
+a.nav-link:focus {
+    color: #f8f9fa !important;
+}
+
+#navigation>nav>button {
+    background-color: #2341C1;
+    outline: none;
+    min-width: 98%;
+}
+
+.nav-item {
+    -moz-user-select: none;
+    -khtml-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
 .title {
     font-weight: 600;
     line-height: 1.125;
@@ -48,7 +68,7 @@ a.nav-link {
 .title>a:hover,
 .title>a:active,
 .title>a:focus {
-    border-bottom: 2px solid #2341C1;
+    /* border-bottom: 2px solid #2341C1; */
     color: #2341C1;
 }
 
@@ -74,20 +94,6 @@ pre.highlight {
     border-bottom: 1px solid #2341C1;
 }
 
-#navigation>nav>button {
-    background-color: #2341C1;
-    outline: none;
-    min-width: 98%;
-}
-
-.nav-item {
-    -moz-user-select: none;
-    -khtml-user-select: none;
-    -webkit-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-}
-
 /* Scroll Indicator */
 
 .header {
@@ -96,7 +102,7 @@ pre.highlight {
     z-index: 1;
     width: 100%;
     left: 0;
-    background-color: rgba(255, 255, 255, 0.5);
+    background-color: rgba(255, 255, 255, 1);
 }
 
 .progress-container {
@@ -108,4 +114,47 @@ pre.highlight {
     height: 5px;
     background: #2341C1;
     width: 0%;
+}
+
+/*!
+ * Hover.css (http://ianlunn.github.io/Hover/)
+ * Version: 2.3.2
+ * Author: Ian Lunn @IanLunn
+ * Author URL: http://ianlunn.co.uk/
+ * Github: https://github.com/IanLunn/Hover
+ * Hover.css Copyright Ian Lunn 2017. Generated with Sass.
+ */
+
+/* Underline From Center */
+.hvr-underline-from-center {
+    display: inline-block;
+    vertical-align: middle;
+    -webkit-transform: perspective(1px) translateZ(0);
+    transform: perspective(1px) translateZ(0);
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+    position: relative;
+    overflow: hidden;
+}
+
+.hvr-underline-from-center:before {
+    content: "";
+    position: absolute;
+    left: 51%;
+    right: 51%;
+    bottom: 0;
+    background-color: #f8f9fa;
+    height: 4px;
+    -webkit-transition-property: left, right;
+    transition-property: left, right;
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+    -webkit-transition-timing-function: ease-out;
+    transition-timing-function: ease-out;
+}
+
+.hvr-underline-from-center:hover:before,
+.hvr-underline-from-center:focus:before,
+.hvr-underline-from-center:active:before {
+    left: 15px;
+    right: 15px;
 }
