--- a/_includes/components/head.njk
+++ b/_includes/components/head.njk
@@ -5,7 +5,7 @@
   <meta name="google-site-verification" content="DAXhQi5iFH9IXoyrocu1dZIZklcbWwr87YUCwrOlPMM" />
 
   <title>{{ title }} - {{ site.title }}</title>
-  <meta name="description" content="{{ description or site.description }}">
+  <meta name="description" content="{{ socialDescription or site.description }}">
 
   {# Twitter metadata #}
   <meta name="twitter:card" content="summary">
@@ -13,7 +13,7 @@
   <meta name="twitter:site" content="{{ site.author.twitterUsername }}">
   {% endif %}
   <meta name="twitter:title" content="{{ title }}">
-  <meta name="twitter:description" content="{{ description or site.description }}">
+  <meta name="twitter:description" content="{{ socialDescription or site.description }}">
   {% if site.author.twitterUsername %}
   <meta name="twitter:creator" content="{{ site.author.twitterUsername }}">
   {% endif %}
@@ -25,7 +25,7 @@
   <meta property="og:type" content="article" />
   <meta property="og:url" content="{{ site.url}}{{ page.url }}" />
   {# <meta property="og:image" content="http://example.com/image.jpg" /> #}
-  <meta property="og:description" content="{{ description or site.description }}" />
+  <meta property="og:description" content="{{ socialDescription or site.description }}" />
   <meta property="og:site_name" content="{{ site.title }}" />
   {# End of Facebook / Open Graph metadata #}
 
