--- a/_includes/components/head.njk
+++ b/_includes/components/head.njk
@@ -47,6 +47,7 @@
   {% if site.indieauth == true %}
   <link rel="authorization_endpoint" href="https://indieauth.com/auth">
   <link rel="token_endpoint" href="https://tokens.indieauth.com/token">
+  <link rel="microsub" href="https://aperture.p3k.io/microsub/134">
   {% endif %}
 
   {% if site.micropub == true %}
