increasing font-size

--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -6,7 +6,7 @@ section: post
 {% include "components/scrollbar_indicator.njk" %}
 
 <div class="row">
-    <article class="h-entry mt-3 col-12 col-md-9">
+    <article class="h-entry mt-2 col-12 col-md-10">
 
         <!-- h-entry things -->
         <div class="d-none">
@@ -16,7 +16,7 @@ section: post
         </div>
         <!-- End of h-entry things -->
 
-                <div class="mt-3">
+                <div>
                     <h2 class="post-title p-name">{{ title }}</h2>
                 </div>
 
