--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -12,6 +12,7 @@ html {
 
 body {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+    font-size: 1.125rem;
 }
 
 .word-wrap-break-word {
