fixing some alignment isssues

--- a/_includes/components/nav.njk
+++ b/_includes/components/nav.njk
@@ -1,5 +1,5 @@
-<div class="col-11 offset-1 col-md-9 offset-md-1 pl-0" id="navigation">
-  <nav class="navbar navbar-expand-md">
+<div class="col-11 offset-1 col-md-9 offset-md-1 p-0 pl-3" id="navigation">
+  <nav class="navbar navbar-expand-md pl-0">
     <button class="navbar-toggler text-light py-2 mx-1" id="menu-button" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation"><span class="px-5 py-3" id="menu-text">Menu</span>
     </button>
 
