--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -12,6 +12,7 @@
 						<a class="h-card" rel="me" href="/">{{ site.title }}</a>
 					</h1>
 				</div>
+
 				{% include "components/nav.njk" %}
 
 			</div>
@@ -20,7 +21,7 @@
 
 		<main>
 			<div class="row mt-2">
-				<div class="col-10 offset-1 col-md-8 offset-md-1 p-0">
+				<div class="col-10 offset-1 col-md-8 offset-md-1">
 					{{ content | safe }}
 				</div>
 			</div>
