--- a/_includes/components/postslist.njk
+++ b/_includes/components/postslist.njk
@@ -1,7 +1,7 @@
 {% for post in postslist | reverse %}
 <article>
 <div class="row py-2 my-0 mx-0">
-		<div class="col-12 col-md-4 d-flex align-items-center">
+		<div class="col-12 col-md-4 d-flex align-items-center pl-0">
 			<h5 class="post-date">{{ post.date | readableDate }}</h5>
 		</div>
 		<div class="col-12 col-md-8 d-flex align-items-center">
