--- a/_includes/layouts/home.njk
+++ b/_includes/layouts/home.njk
@@ -3,6 +3,7 @@ layout: layouts/base.njk
 section: home
 ---
 {% set postslist = collections.posts %}
-
-<h2 class="h3 pl-3">Blogposts</h2>
+<div class="row py-2 my-0 mx-0">
+	<h2 class="h3 post-title">Blogposts</h2>
+</div>
 {% include "components/postslist.njk" %}
