more alignment work

--- a/_includes/components/postslist.njk
+++ b/_includes/components/postslist.njk
@@ -4,7 +4,7 @@
 		<div class="col-12 col-md-4 d-flex align-items-center pl-0">
 			<h5 class="post-date">{{ post.date | readableDate }}</h5>
 		</div>
-		<div class="col-12 col-md-8 d-flex align-items-center">
+		<div class="col-12 col-md-8 d-flex pl-0 align-items-center">
 			<h2 class="post-title">
 				<a href="{{ post.url | url }}" title="{{ post.data.title }}">{{ post.data.title }}</a>
 			</h2>
