--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -4,9 +4,10 @@ section: post
 ---
 
 {% include "components/scrollbar_indicator.njk" %}
+<div class="row py-2 my-0 mx-0">
 
-<div class="row">
-    <article class="h-entry mt-2 col-12 col-md-10">
+	<div class="col-10 offset-1 col-md-8 offset-md-1 pl-0 mt-2">
+    <article class="h-entry mt-2">
 
         <!-- h-entry things -->
         <div class="d-none">
@@ -29,4 +30,5 @@ section: post
                 </div>
 
     </article>
+</div>
 </div>
