--- a/_includes/components/nav.njk
+++ b/_includes/components/nav.njk
@@ -1,6 +1,6 @@
-<div class="col-11 offset-1 col-md-9 offset-md-1 p-0 pl-3" id="navigation">
-  <nav class="navbar navbar-expand-md pl-0">
-    <button class="navbar-toggler text-light py-2 mx-1" id="menu-button" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation"><span class="px-5 py-3" id="menu-text">Menu</span>
+<div class="col-11 col-md-9 offset-0 offset-md-1" id="navigation">
+  <nav class="navbar navbar-expand-md">
+    <button class="navbar-toggler text-light py-2 mx-1" id="menu-button" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation"><span class="" id="menu-text">Menu</span>
     </button>
 
     <div class="collapse navbar-collapse mt-2 mt-md-0" id="navbarToggler">
