--- a/_includes/components/footer.njk
+++ b/_includes/components/footer.njk
@@ -29,7 +29,7 @@
 
     {% if site.contentLicence %}
 
-    <div class="col-10 offset-1 col-md-4 mt-4 mt-md-0 p-0 border-top">
+    <div class="col-10 offset-1 offset-md-3 col-md-4 mt-4 mt-md-0 p-0 border-top">
       <p class="text-md-right">
         Content on this website is under a
         <a href="{{ site.contentLicence.link }}">{{ site.contentLicence.text }}</a>.
