--- a/_includes/layouts/reading-list.njk
+++ b/_includes/layouts/reading-list.njk
@@ -5,7 +5,7 @@ section: reading-list
 <p>
     This is a list of the {{ readingList | length }}
     {% if readingList | length > 50 %}
-        <a href="https://github.com/edjw/edjw-blog/blob/9761e3f209ed003b3df2cc5942ab7fb3e6aa5da6/_includes/layouts/reading-list.njk#L6">
+        <a href="https://github.com/edjw/edjw-blog/blob/a528443b33ce24de27097d6f1e9ac74ed817e851/_includes/layouts/reading-list.njk#L7-L11">
             (🤦‍‍‍‍)
         </a>
     {% endif %}
