fixing pocket links on reading list

--- a/_includes/layouts/reading-list.njk
+++ b/_includes/layouts/reading-list.njk
@@ -34,10 +34,10 @@ section: reading-list
         </p>
 
         <small>
-            <a href="https://getpocket.com/a/read/{{ item.item_id }}" class="border-0">
+            <a href="https://app.getpocket.com/read/{{ item.item_id }}" class="border-0">
                 <img src="/assets/internal_images/pocket.svg" alt="Pocket logo" class="img-fluid mr-2" width="20">
             </a>
-            <a href="https://getpocket.com/a/read/{{ item.item_id }}">
+            <a href="https://app.getpocket.com/read/{{ item.item_id }}">
                 Pocket article link
             </a>
         </small>
