--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -19,7 +19,7 @@ body {
     font-size: 1.125rem;
 }
 
-.word-wrap-break-word, .footnote-item {
+.word-wrap-break-word, .footnote-item a {
     word-wrap: anywhere;
     word-break: break-all;
 }
