--- a/_includes/components/nav.njk
+++ b/_includes/components/nav.njk
@@ -14,7 +14,7 @@
             <a href="{{ nav.url | url }}"
               class="nav-link text-light mx-1 {#{% if loop.first %}rounded-left{% endif %} {% if loop.last %}rounded-right{% endif %}#} py-3 py-md-2"><img
                 src="/assets/internal_images/{{ nav.navicon }}" class="img-fluid mr-2"
-                width="15">{{ nav.text }}</a>
+                width="15" alt="{{ nav.alt_text }}">{{ nav.text }}</a>
           </li>
           {% endfor %}
 
