--- a/_includes/components/head.njk
+++ b/_includes/components/head.njk
@@ -62,14 +62,10 @@
   <script async src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
   {% endif %}
 
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-  <link rel="stylesheet" href="https://unpkg.com/scroll-hint@1.1.10/css/scroll-hint.css"
-    integrity="sha384-QgWdhuWzC+7oVJvldGuLtpre0frPZJ3nl9FQjhSMchE5blRfVta5IZggUJlwd1qx" crossorigin="anonymous">
-  <script src="https://unpkg.com/scroll-hint@1.1.10/js/scroll-hint.min.js"
-    integrity="sha384-zSqpVUzBr2793nyqYIF21Cm6NAojO1qFxgFXs2gvheV1Q6p8Quw/OpM+9CZM6xjz"
-    crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://unpkg.com/scroll-hint@latest/css/scroll-hint.css">
+  <script src="https://unpkg.com/scroll-hint@latest/js/scroll-hint.min.js"></script>
 
   <link rel="stylesheet" href="/assets/css/main.css">
 
