making the big blockers local

--- a/_includes/components/head.njk
+++ b/_includes/components/head.njk
@@ -62,13 +62,17 @@
   <script defer src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
   {% endif %}
 
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  {# <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"> #}
 
-  <link rel="stylesheet" href="https://unpkg.com/scroll-hint@1.2.4/css/scroll-hint.css" defer>
-  <script src="https://unpkg.com/scroll-hint@1.2.4/js/scroll-hint.min.js" defer></script>
+
+  {# <link rel="stylesheet" href="https://unpkg.com/scroll-hint@1.2.4/css/scroll-hint.css" defer> #}
+  {# <script src="https://unpkg.com/scroll-hint@1.2.4/js/scroll-hint.min.js" defer></script> #}
+  <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/assets/css/scroll-hint.css">
 
   <link rel="stylesheet" href="/assets/css/main.css">
 
+  <script src="/assets/js/scroll-hint.min.js" defer></script>
   <script src="/assets/js/menu.js" defer></script>
 
   <script src="/assets/js/matomo.js" defer></script>
