--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -20,8 +20,11 @@ body {
 }
 
 .word-wrap-break-word, .footnote-item a {
-    word-wrap: anywhere;
-    word-break: break-all;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  -ms-word-break: break-all;
+  word-break: break-all;
+  word-break: break-word;
 }
 
 a {
