--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,23 +3,25 @@
 } */
 
 html {
-    font-size: 16px;
-    -moz-osx-font-smoothing: grayscale;
-    -webkit-font-smoothing: antialiased;
-    min-width: 300px;
-    text-rendering: optimizeLegibility;
-    -webkit-text-size-adjust: 100%;
-    -moz-text-size-adjust: 100%;
-    -ms-text-size-adjust: 100%;
-    text-size-adjust: 100%
+  font-size: 16px;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  min-width: 300px;
+  text-rendering: optimizeLegibility;
+  -webkit-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  text-size-adjust: 100%;
 }
 
 body {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-    font-size: 1.125rem;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+  font-size: 1.125rem;
 }
 
-.word-wrap-break-word, .footnote-item a {
+.word-wrap-break-word,
+.footnote-item a {
   overflow-wrap: break-word;
   word-wrap: break-word;
   -ms-word-break: break-all;
@@ -28,109 +30,113 @@ body {
 }
 
 a {
-    border-bottom: 2px solid #2341C1;
-    color: #212121;
+  border-bottom: 2px solid #2341c1;
+  color: #212121;
 }
 
 a:hover,
 a:active,
 a:focus {
-    color: #2341C1;
-    text-decoration: none;
+  color: #2341c1;
+  text-decoration: none;
 }
 
 a.nav-link {
-    background-color: #2341C1;
+  background-color: #2341c1;
 }
 
 a.nav-link:hover,
 a.nav-link:active,
 a.nav-link:focus {
-    color: #f8f9fa !important;
+  color: #f8f9fa !important;
 }
 
-#navigation>nav>button {
-    background-color: #2341C1;
-/*     outline: none; */
-    min-width: 98%;
+#navigation > nav > button {
+  background-color: #2341c1;
+  /*     outline: none; */
+  min-width: 98%;
 }
 
 .nav-item {
-    -moz-user-select: none;
-    -khtml-user-select: none;
-    -webkit-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
+  -moz-user-select: none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 .title {
-    font-weight: 600;
-    line-height: 1.125;
-    font-size: 2rem;
+  font-weight: 600;
+  line-height: 1.125;
+  font-size: 2rem;
 }
 
-.title>a {
-    border: none;
-    color: #2341C1;
+.title > a {
+  border: none;
+  color: #2341c1;
 }
 
-.title>a:hover,
-.title>a:active,
-.title>a:focus {
-    /* border-bottom: 2px solid #2341C1; */
-    color: #2341C1;
+.title > a:hover,
+.title > a:active,
+.title > a:focus {
+  /* border-bottom: 2px solid #2341C1; */
+  color: #2341c1;
 }
 
 .post-date {
-    font-size: 1.2rem;
-    font-weight: 500;
+  font-size: 1.2rem;
+  font-weight: 500;
 }
 
 .post-title {
-    font-weight: 400;
-    font-size: 1.5rem;
+  font-weight: 400;
+  font-size: 1.5rem;
 }
 
-.post-title>a {
-    border: none;
-    text-decoration: underline;
-    -webkit-text-decoration-color: #2341C1;
-    text-decoration-color: #2341C1;
+.post-title > a {
+  border: none;
+  text-decoration: underline;
+  -webkit-text-decoration-color: #2341c1;
+  text-decoration-color: #2341c1;
 }
 
 pre.highlight {
-    border-top: 1px solid #2341C1;
-    border-bottom: 1px solid #2341C1;
+  border-top: 1px solid #2341c1;
+  border-bottom: 1px solid #2341c1;
+}
+
+pre {
+  border: 1px solid #fff;
+  padding: 1rem 0.5rem;
 }
 
 .w-80 {
-    width: 80%;
+  width: 80%;
 }
 
 /* Scroll Indicator */
 
 .header {
-    position: fixed;
-    top: 0;
-    z-index: 1;
-    width: 100%;
-    left: 0;
-    background-color: rgba(255, 255, 255, 1);
+  position: fixed;
+  top: 0;
+  z-index: 1;
+  width: 100%;
+  left: 0;
+  background-color: rgba(255, 255, 255, 1);
 }
 
 .progress-container {
-    width: 100%;
-    height: 5px;
+  width: 100%;
+  height: 5px;
 }
 
 .progress-bar {
-    height: 5px;
-    background: #2341C1;
-    width: 0%;
+  height: 5px;
+  background: #2341c1;
+  width: 0%;
 }
 
 /* End of Scroll Indicator */
-
 
 /*!
  * Hover.css (http://ianlunn.github.io/Hover/)
@@ -143,36 +149,36 @@ pre.highlight {
 
 /* Underline From Center */
 .hvr-underline-from-center {
-    display: inline-block;
-    vertical-align: middle;
-    -webkit-transform: perspective(1px) translateZ(0);
-    transform: perspective(1px) translateZ(0);
-    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-    position: relative;
-    overflow: hidden;
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  position: relative;
+  overflow: hidden;
 }
 
 .hvr-underline-from-center:before {
-    content: "";
-    position: absolute;
-    left: 51%;
-    right: 51%;
-    bottom: 0;
-    background-color: #f8f9fa;
-    height: 4px;
-    -webkit-transition-property: left, right;
-    transition-property: left, right;
-    -webkit-transition-duration: 0.3s;
-    transition-duration: 0.3s;
-    -webkit-transition-timing-function: ease-out;
-    transition-timing-function: ease-out;
+  content: "";
+  position: absolute;
+  left: 51%;
+  right: 51%;
+  bottom: 0;
+  background-color: #f8f9fa;
+  height: 4px;
+  -webkit-transition-property: left, right;
+  transition-property: left, right;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-timing-function: ease-out;
+  transition-timing-function: ease-out;
 }
 
 .hvr-underline-from-center:hover:before,
 .hvr-underline-from-center:focus:before,
 .hvr-underline-from-center:active:before {
-    left: 15px;
-    right: 15px;
+  left: 15px;
+  right: 15px;
 }
 
 /* End of Hover css */
