temporarily disabling csp

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -106,8 +106,8 @@ pre.highlight {
 }
 
 pre {
-  border: 1px solid #fff;
   padding: 1rem 0.5rem;
+  box-shadow: 0 4px 6px 0 hsla(0,0%, 0%, 0.2);
 }
 
 .w-80 {
