--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,7 +7,7 @@ html {
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   min-width: 300px;
-  text-rendering: optimizeLegibility;
+  text-rendering: optimizeSpeed;
   -webkit-text-size-adjust: 100%;
   -moz-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
