--- a/_includes/components/scrollbar_indicator.njk
+++ b/_includes/components/scrollbar_indicator.njk
@@ -1,5 +1,5 @@
-<div class="header">
-    <div class="progress-container">
-        <div class="progress-bar" id="scroll_indicator"></div>
+<div>
+    <div>
+        <div></div>
     </div>
 </div>
