--- a/_includes/layouts/home.njk
+++ b/_includes/layouts/home.njk
@@ -3,11 +3,11 @@ layout: layouts/base.njk
 section: home
 ---
 {% set postslist = collections.posts %}
-<div class="row mt-5">
-	<div class="col-10 offset-1">
+<div>
+	<div>
 
-		<h2 class="h3 post-title">Blogposts</h2>
-		<div class="mt-4">
+		<h2>Blogposts</h2>
+		<div>
 			{% include "components/postslist.njk" %}
 		</div>
 	</div>
