--- a/_includes/layouts/page.njk
+++ b/_includes/layouts/page.njk
@@ -3,11 +3,11 @@ layout: layouts/base.njk
 section: page
 ---
 {% include "components/scrollbar_indicator.njk" %}
-<div class="row py-2 my-0 mx-0">
+<div>
 
-	<div class="col-10 offset-1 col-md-8 offset-md-1 pl-0 mt-3">
+	<div>
 
-			<h2 class="post-title">{{ title }}</h2>
+			<h2>{{ title }}</h2>
 
 			{{ content | safe }}
 
