--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -4,9 +4,9 @@ section: post
 ---
 
 {% include "components/scrollbar_indicator.njk" %}
-<div class="row py-2 my-0 mx-0">
+<div>
 
-	<div class="col-10 offset-1 col-md-8 offset-md-1 pl-0 mt-2">
+	<div>
     <article class="h-entry mt-2">
 
         <!-- h-entry things -->
