--- a/_includes/components/footer.njk
+++ b/_includes/components/footer.njk
@@ -1,6 +1,6 @@
 <footer>
-  <div class="row mt-4 mb-4">
-    <div class="col-10 offset-1 col-md-1 offset-md-1 p-0 border-top">
+  <div>
+    <div>
 
       {% if site.author.twitterUsername %}
       <a href="https://twitter.com/{{ site.author.twitterUsername }}" rel="me">Twitter</a>
@@ -29,8 +29,8 @@
 
     {% if site.contentLicence %}
 
-    <div class="col-10 offset-1 offset-md-3 col-md-4 mt-4 mt-md-0 p-0 border-top">
-      <p class="text-md-right">
+    <div>
+      <p>
         Content on this website is under a
         <a href="{{ site.contentLicence.link }}">{{ site.contentLicence.text }}</a>.
       </p>
