--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -4,11 +4,11 @@
 {% include "components/head.njk" %}
 
 <body>
-	<div class="container">
+	<div>
 		<header>
-			<div class="row mt-4 mb-4 justify-content-center justify-content-md-start">
-				<div class="col-11 offset-0 col-md-9 offset-md-1 p-0 pl-3">
-					<h1 class="title">
+			<div>
+				<div>
+					<h1>
 						<a class="h-card" rel="me" href="/">{{ site.title }}</a>
 					</h1>
 				</div>
